--- a/package.json
+++ b/package.json
@@ -31,8 +31,11 @@
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^2.2.0",
     "mongoose": "^5.5.0",
     "prettier": "^1.16.4",
-    "prompts": "^2.0.4"
+    "prompts": "^2.0.4",
+    "url-exists": "^1.0.3",
+    "valid-url": "^1.0.9"
   }
 }
