--- a/package.json
+++ b/package.json
@@ -24,15 +24,21 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "babar": "^0.2.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "chai": "^4.2.0",
     "clui": "^0.3.6",
     "cors": "^2.8.5",
+    "date-arithmetic": "^3.1.0",
+    "deep-equal": "^1.0.1",
+    "delay": "^4.2.0",
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
     "mongoose": "^5.5.0",
+    "nock": "^10.0.6",
     "prettier": "^1.16.4",
     "prompts": "^2.0.4",
     "url-exists": "^1.0.3",
